--- a/frontend/src/app/main/pages/clientes/agregarCliente/agregarCliente.component.html
+++ b/frontend/src/app/main/pages/clientes/agregarCliente/agregarCliente.component.html
@@ -1,5 +1,5 @@
 <button
-class="px-4 py-2 bg-red-500 text-lg rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear"
+class="px-4 py-2 bg-red-500 text-sm rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear"
 type="button"
 (click)="toggleModal()"
 >
@@ -18,7 +18,7 @@ class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:o
     <div
       class="flex items-start justify-between py-6 p-6 border-b border-solid border-gray-300 rounded"
     >
-      <h3 class="text-3xl font-semibold">
+      <h3 class="text-2xl font-semibold">
        Agrega un Cliente
       </h3>
       <button
@@ -35,54 +35,54 @@ class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:o
     <!--body-->
     <div class="relative p-6 flex-auto">
         <div class="w-full pb-6 pt-2">
-          <h3 class="text-2xl font-bold">Informacion de Cliente</h3>
+          <h3 class="text-xl font-bold">Informacion de Cliente</h3>
         </div>
-      <form class="my-4 text-gray-600 text-lg">
+      <form class="my-4 text-gray-600 text-sm">
           <div class="w-full grid grid-cols-2 lg:grid-cols-6 gap-2">
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="cedula" class="text-md text-gray-800 mb-2 font-bold">Cedula</label>
+                  <label for="cedula" class=" text-gray-800 mb-2 font-bold">Cedula</label>
                   <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="cedula" id="cedula" placeholder="ej. 13567439">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
+                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-4">
-                  <label for="nombre" class="text-md text-gray-800 mb-2 font-bold">Nombres Y Apellidos</label>
+                  <label for="nombre" class=" text-gray-800 mb-2 font-bold">Nombres Y Apellidos</label>
                   <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="nombre" id="nombre" placeholder="ej. Juanito Perez">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
+                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="fechaNacimiento" class="text-md text-gray-800 mb-2 font-bold">Fecha Nacimiento</label>
+                  <label for="fechaNacimiento" class=" text-gray-800 mb-2 font-bold">Fecha Nacimiento</label>
                   <input type="date" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="fechaNacimiento" id="fechaNacimiento" >
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
+                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="telefono" class="text-md text-gray-800 mb-2 font-bold">Telefono</label>
+                  <label for="telefono" class=" text-gray-800 mb-2 font-bold">Telefono</label>
                   <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="telefono" id="telefono" placeholder="ej. 04262852415">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
+                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="correo" class="text-md text-gray-800 mb-2 font-bold">Correo</label>
+                  <label for="correo" class=" text-gray-800 mb-2 font-bold">Correo</label>
                   <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="correo" id="correo" placeholder="ej. correo@correo.com">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
+                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
               <div class="col-span-2 md:col-span-1 lg:col-span-6">
-                  <label for="direccion" class="text-md text-gray-800 mb-2 font-bold">Direccion</label>
+                  <label for="direccion" class=" text-gray-800 mb-2 font-bold">Direccion</label>
                   <textarea type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="direccion" id="direccion" placeholder="ej. barquisimeto casa s/n"></textarea>
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
+                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
-              <div class="col-span-2 md:col-span-1 lg:col-star-2 lg:col-end-5 lg:col-span-2">
-                  <button type="submit" class="px-4 py-2 bg-red-500 text-lg rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear w-full">Registrar</button>
+              <div class="col-span-2 lg:col-span-6">
+                  <button type="submit" class="px-6 py-2 bg-red-500 text-sm rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear mx-auto block">Registrar</button>
               </div>
           </div>
       </form>
