--- a/frontend/src/app/main/pages/productos/verProducto/verProducto.component.html
+++ b/frontend/src/app/main/pages/productos/verProducto/verProducto.component.html
@@ -7,8 +7,8 @@
       <div class="border-0 rounded-lg shadow-lg  flex flex-col w-full bg-white outline-none focus:outline-none">
         <!--header-->
         <div class="flex items-start justify-between p-5 border-b border-solid border-gray-300 rounded-t">
-          <h3 class="text-3xl font-semibold">
-            Modal Title
+          <h3 class="text-2xl font-semibold">
+            Informacion de Producto
           </h3>
           <button class="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none" (click)="toggleModal()">
             <span class="bg-transparent text-black opacity-5 h-6 w-6 text-2xl block outline-none focus:outline-none">
@@ -18,15 +18,29 @@
         </div>
         <!--body-->
         <div class="p-6 text-left">
-          <div>
-            <p class="my-4 text-gray-600 text-lg leading-relaxed">
-                I always felt like I could do anything. That’s the main
-                thing people are controlled by! Thoughts- their perception
-                of themselves! They're slowed down by their perception of
-                themselves. If you're taught you can’t do anything, you
-                won’t do anything. I was taught I could do everything.
-              </p>
-          </div>
+          <table class="flex rounded">
+            <thead>
+                <tr class="text-left flex flex-col uppercase bg-gray-200 ">
+                    <th class="py-3 px-2">Cedula</th>
+                    <th class="py-3 px-2">Nombre y Apellido</th>
+                    <th class="py-3 px-2">Fecha de Nacimiento</th>
+                    <th class="py-3 px-2">Telefono</th>
+                    <th class="py-3 px-2">Correo</th>
+                    <th class="py-3 px-2">Direccion</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="text-left flex flex-col">
+
+                    <td class="py-3 px-2">26136504</td>
+                    <td class="py-3 px-2">Luis Melendez</td>
+                    <td class="py-3 px-2">27/02/1998</td>
+                    <td class="py-3 px-2">72349874</td> 
+                    <td class="py-3 px-2">mail@mail.com</td> 
+                    <td class="py-3 px-2">Barrio colinas del trompillo</td> 
+                </tr>
+            </tbody>
+        </table>      
         </div>
         <!--footer-->
         <div class="flex items-center justify-end p-6 border-t border-solid border-gray-300 rounded-b">
