--- a/frontend/src/app/main/pages/proveedores/modificarProveedor/modificarProveedor.component.html
+++ b/frontend/src/app/main/pages/proveedores/modificarProveedor/modificarProveedor.component.html
@@ -9,7 +9,7 @@ A
 *ngIf="showModal"
 class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center flex text-left"
 >
-<div class="relative w-auto my-6 mx-auto w-11/12 md:w-5/6 lg:w-4/6">
+<div class="relative w-auto my-6 mx-auto w-11/12 md:w-1/2 lg:w-1/3">
   <!--content-->
   <div
     class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none"
@@ -18,8 +18,8 @@ class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:o
     <div
       class="flex items-start justify-between py-6 p-6 border-b border-solid border-gray-300 rounded"
     >
-      <h3 class="text-3xl font-semibold">
-       Actualizar Cliente:
+      <h3 class="text-2xl font-semibold">
+       Actualizar Proveedor
       </h3>
       <button
         class="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none"
@@ -35,54 +35,26 @@ class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:o
     <!--body-->
     <div class="relative p-6 flex-auto">
         <div class="w-full pb-6 pt-2">
-          <h3 class="text-2xl font-bold">Informacion de Cliente</h3>
+          <h3 class="text-xl font-bold">Informacion de Proveedor</h3>
         </div>
-      <form class="my-4 text-gray-600 text-lg">
-          <div class="w-full grid grid-cols-2 lg:grid-cols-6 gap-2">
-              <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="cedula" class="text-md text-gray-800 mb-2 font-bold">Cedula</label>
-                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="cedula" id="cedula" placeholder="ej. 13567439">
+      <form class="my-4 text-gray-600 text-sm">
+          <div class="w-full grid grid-cols-2 gap-2">
+              <div class="col-span-2 ">
+                  <label for="rif" class="text-gray-800 mb-2 font-bold">Rif</label>
+                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="rif" id="rif" placeholder="ej. 13567439">
                   <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
-              <div class="col-span-2 md:col-span-1 lg:col-span-4">
-                  <label for="nombre" class="text-md text-gray-800 mb-2 font-bold">Nombres Y Apellidos</label>
+              <div class="col-span-2 ">
+                  <label for="nombre" class="text-gray-800 mb-2 font-bold">Nombre</label>
                   <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="nombre" id="nombre" placeholder="ej. Juanito Perez">
                   <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
                     Este campo es obligatorio
                   </span>
               </div>
-              <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="fechaNacimiento" class="text-md text-gray-800 mb-2 font-bold">Fecha Nacimiento</label>
-                  <input type="date" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="fechaNacimiento" id="fechaNacimiento" >
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
-              </div>
-              <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="telefono" class="text-md text-gray-800 mb-2 font-bold">Telefono</label>
-                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="telefono" id="telefono" placeholder="ej. 04262852415">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
-              </div>
-              <div class="col-span-2 md:col-span-1 lg:col-span-2">
-                  <label for="correo" class="text-md text-gray-800 mb-2 font-bold">Correo</label>
-                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="correo" id="correo" placeholder="ej. correo@correo.com">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
-              </div>
-              <div class="col-span-2 md:col-span-1 lg:col-span-6">
-                  <label for="direccion" class="text-md text-gray-800 mb-2 font-bold">Direccion</label>
-                  <textarea type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="direccion" id="direccion" placeholder="ej. barquisimeto casa s/n"></textarea>
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-sm text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
-              </div>
-              <div class="col-span-2 md:col-span-1 lg:col-star-2 lg:col-end-5 lg:col-span-2">
-                  <button type="submit" class="px-4 py-2 bg-red-500 text-lg rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear w-full">Actualizar</button>
+              <div class="col-span-2">
+                  <button type="submit" class="px-4 py-2 bg-red-500 rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear w-full">Actualizar</button>
               </div>
           </div>
       </form>
