--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,8 +16,8 @@
  
           </a>
           <div class="dropdown-menu dropdown-menu-right">
-            <button class="dropdown-item" type="button">Panel de Usuario</button>
-            <div class="dropdown-divider"></div>
+            <!-- <button class="dropdown-item" type="button">Panel de Usuario</button>
+            <div class="dropdown-divider"></div> -->
             <button class="dropdown-item" type="button" (click)="logout()">Salir</button>
           </div>
         </figcaption>
@@ -26,22 +26,22 @@
       <nav class="full-box nav-lateral-menu">
         <ul>
           <li>
-            <a [routerLink]="['/dashboard']" ><i class="fab fa-dashcube fa-fw"></i> &nbsp; Principal</a>
+            <a [routerLink]="['/dashboard']" ><i class="fas fa-home fa-fw"></i> &nbsp; Principal</a>
           </li>
           <li>
-            <a [routerLink]="['/clientes']"><i class="fas fa-users fa-fw"></i> &nbsp; Clientes </a>
-          </li>
-
-          <li>
-            <a [routerLink]="['/productos']" ><i class="fas fa-pallet fa-fw"></i> &nbsp; Productos</a>
+            <a [routerLink]="['/clientes']"><i class="fas fa-portrait fa-fw"></i> &nbsp; Clientes </a>
           </li>
 
           <li>
-            <a class="nav-btn-submenu"><i class="fas fa-file-invoice-dollar fa-fw"></i> &nbsp; Ventas<i
+            <a [routerLink]="['/productos']" ><i class="fas fa-car-battery fa-fw"></i> &nbsp; Productos</a>
+          </li>
+ 
+          <li>
+            <a class="nav-btn-submenu"><i class="fas fa-shopping-cart fa-fw"></i> &nbsp; Ventas<i
                 class="fas fa-chevron-down"></i></a>
             <ul>
               <li>
-                <a href="/ventas/registrar" ><i class="fas fa-plus fa-fw"></i> &nbsp; Registrar venta</a>
+                <a [routerLink]="['/ventas/registrar']" ><i class="fas fa-plus fa-fw"></i> &nbsp; Registrar venta</a>
               </li>
               <li>
                 <a [routerLink]="['/ventas/listado']" ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Consultar Ventas</a>
@@ -50,11 +50,11 @@
           </li>
 
           <li>
-            <a class="nav-btn-submenu"><i class="fas  fa-user-secret fa-fw"></i> &nbsp; Compras <i
+            <a class="nav-btn-submenu"><i class="fas  fa-truck fa-fw"></i> &nbsp; Compras <i
                 class="fas fa-chevron-down"></i></a>
             <ul>
               <li>
-                <a href="/compras/registrar" ><i class="fas fa-plus fa-fw"></i> &nbsp; Nueva Compra</a>
+                <a [routerLink]="['/compras/registrar']" ><i class="fas fa-plus fa-fw"></i> &nbsp; Nueva Compra</a>
               </li>
               <li>
                 <a [routerLink]="['/compras/consultar']" ><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Listado de Compras</a>
@@ -62,14 +62,17 @@
             </ul>
           </li>
           <li>               
-            <a [routerLink]="['/usuarios']"><i class="fas fa-file-invoice-dollar fa-fw"></i> &nbsp; Usuarios</a>
+            <a [routerLink]="['/proveedores']"><i class="fas fa-user-shield fa-fw"></i> &nbsp; proveedores</a>
+        </li>
+          <li>               
+            <a [routerLink]="['/usuarios']"><i class="fas fa-user-shield fa-fw"></i> &nbsp; Usuarios</a>
         </li>
         <li>
-          <a [routerLink]="['/reportes']"><i class="fas fa-clipboard-list fa-fw"></i> &nbsp; Reportes</a>
+          <a [routerLink]="['/reportes']"><i class="fas fa-file-contract fa-fw"></i> &nbsp; Reportes</a>
         </li>
-        <li>
-          <a [routerLink]="['/bitacora']"><i class="fas fa-search fa-fw"></i> &nbsp; Bitacora</a>
-        </li>
+        <!-- <li>
+          <a [routerLink]="['/bitacora']"><i class="fas fa-book fa-fw"></i> &nbsp; Bitacora</a>
+        </li> -->
 
         </ul>
       </nav>
@@ -79,8 +82,8 @@
   <!-- Page content -->
   <section class="full-box page-content ">
     <nav class="full-box navbar-info" >
-      <a (click)="toggleMenu()" class="float-left show-nav-lateral flex-center " id="show-nav-lateral">
-        <i class="fas fa-2x" [ngClass]="{'fa-bars':hamburguer,'fa-arrow-left':!hamburguer}"></i> 
+      <a  class="float-left show-nav-lateral flex-center d-md-none" id="show-nav-lateral">
+        <i class="fas fa-2x fa-bars"></i> 
       </a>
 
       
@@ -89,8 +92,8 @@
         </a>
       
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-          <button class="dropdown-item" type="button">Panel de Usuario</button>
-        <div class="dropdown-divider"></div>
+          <!-- <button class="dropdown-item" type="button">Panel de Usuario</button>
+        <div class="dropdown-divider"></div> -->
         <button class="dropdown-item" type="button" (click)="logout()">Salir</button>
         </div>
      
