--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,16 +1,13 @@
 <div class="full-box page-header">
     <h3 class="text-left">
-        <i class="fab fa-dashcube fa-fw"></i> &nbsp; DASHBOARD
+        <i class="fab fa-dashcube fa-fw"></i> &nbsp; Bienvenido al Sistema GetSales
     </h3>
-    <p class="text-justify">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nostrum rerum animi natus beatae ex. Culpa blanditiis tempore amet alias placeat, obcaecati quaerat ullam, sunt est, odio aut veniam ratione.
-    </p>
 </div>
 
 <!-- Content -->
 <div class="full-box tile-container">
 
-    <a href="client-new.html" class="tile">
+    <a  class="tile" [routerLink]="['/clientes']"  >
         <div class="tile-tittle">Clientes</div>
         <div class="tile-icon">
             <i class="fas fa-users fa-fw"></i>
@@ -18,32 +15,39 @@
         </div>
     </a>
 
-    <a href="item-list.html" class="tile">
-        <div class="tile-tittle">Items</div>
+    <a  class="tile" [routerLink]="['/proveedores']">
+        <div class="tile-tittle">Proveedores</div>
         <div class="tile-icon">
             <i class="fas fa-pallet fa-fw"></i>
             <p>9 Registrados</p>
         </div>
     </a>
 
-    <a href="reservation-list.html" class="tile">
-        <div class="tile-tittle">Prestamos</div>
+    <a h class="tile" [routerLink]="['/ventas/listado']">
+        <div class="tile-tittle">Ventas</div>
         <div class="tile-icon">
             <i class="fas fa-file-invoice-dollar fa-fw"></i>
             <p>10 Registrados</p>
         </div>
     </a>
 
-    <a href="user-list.html" class="tile">
-        <div class="tile-tittle">Usuarios</div>
+    <a  class="tile" [routerLink]="['/compras/consultar']">
+        <div class="tile-tittle">Compras</div>
         <div class="tile-icon">
             <i class="fas fa-user-secret fa-fw"></i>
             <p>50 Registrados</p>
         </div>
     </a>
 
-    <a href="company.html" class="tile">
-        <div class="tile-tittle">Empresa</div>
+    <a  class="tile" [routerLink]="['/usuarios']">
+        <div class="tile-tittle">Usuarios</div>
+        <div class="tile-icon">
+            <i class="fas fa-store-alt fa-fw"></i>
+            <p>1 Registrada</p>
+        </div>
+    </a>
+    <a  class="tile" [routerLink]="['/productos']">
+        <div class="tile-tittle">Productos(baterias)</div>
         <div class="tile-icon">
             <i class="fas fa-store-alt fa-fw"></i>
             <p>1 Registrada</p>
