--- a/frontend/src/app/pages/proveedores/listar/listar.component.html
+++ b/frontend/src/app/pages/proveedores/listar/listar.component.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Agregar Proveedor</h5>
+                <h3 class="modal-title mb-3" id="exampleModalLabel">Agregar Proveedor</h3>
                 <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -20,7 +20,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Actualizar Proveedor: {{proveedor.nombre}}</h5>
+                <h3 class="modal-title mb-3" id="exampleModalLabel">Actualizar Proveedor: {{proveedor.nombre}}</h3>
                 <button  type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -37,7 +37,15 @@
     <div class="container-fluid form-neon">
         <button type="button" class="btn btn-raised btn-primary mb-3" data-toggle="modal" data-target="#modarAgregar"> <i class="fa fa-plus"></i>&nbsp; Agregar Proveedor </button>
     <div class="table-responsive">
-        <legend class="text-center mb-2"><i class="fas fa-user"></i> &nbsp; Listado de Proveedores</legend>
+        <form>
+            <div class="row d-flex justify-content-end">
+                <div class="col-12 col-md-5 col-lg-4">
+                   <div class="form-group bmd-form-group bmd-form-group-lg">
+                    <input type="search" name="buscar" id="buscar" placeholder="Buscar proveedor" class="form-control">
+                   </div>
+                </div>
+            </div>
+        </form>
         <table class="table table-dark table-md">
             <thead>
                 <tr class="text-center roboto-medium">
