--- a/frontend/src/app/main/pages/productos/agregarProducto/agregarProducto.component.html
+++ b/frontend/src/app/main/pages/productos/agregarProducto/agregarProducto.component.html
@@ -37,43 +37,49 @@ class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:o
         <div class="w-full pb-6 pt-2">
           <h3 class="text-xl font-bold">Informacion de Producto</h3>
         </div>
-      <form class="my-4 text-gray-600 text-sm">
+        <div class="w-full" *ngIf="alerta">
+          <app-alert [mensaje]="mensaje" [color]="color" (cerrar)="cerrarAlerta()"></app-alert>
+        </div>
+      <form [formGroup]="formProductos" class="my-4 text-gray-600 text-sm" (ngSubmit)="enviar()">
           <div class="w-full grid grid-cols-4 lg:grid-cols-6 gap-2">
               <div class="col-span-4 md:col-span-2 lg:col-span-3">
                   <label for="codigo" class=" text-gray-800 mb-2 font-bold">Codigo</label>
-                  <input type="text" class="w-full block appearance-none bg-gray-200 border border-gray-200 text-gray-700  box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="codigo" id="codigo" placeholder="ej. B001">
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+                  <input type="text" class="w-full block appearance-none bg-gray-200 border border-gray-200 text-gray-700  box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="codigo" id="codigo" placeholder="ej. B0001" formControlName="nombre">
+                 
               </div>
               <div class="col-span-4 md:col-span-2 lg:col-span-3">
                   <label for="marca" class=" text-gray-800 mb-2 font-bold">Marca</label>
-                  <select name="marca" id="marca" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4">
+                  <select name="marca" id="marca" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4"
+                    formControlName="marca_id"
+                  >
                     <option value="">-- Seleccione --</option>
+                    <option *ngFor="let marca of marcas" value="{{marca.id}}"> {{marca.nombre}} </option>
                   </select>
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+                  
               </div>
               <div class="col-span-4 md:col-span-2 lg:col-span-3">
                   <label for="amperaje" class=" text-gray-800 mb-2 font-bold">Amperaje</label>
-                  <select name="amperaje" id="amperaje" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4">
+                  <select name="amperaje" id="amperaje" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4"
+                    formControlName="amperaje_id"
+                  >
                     <option value="">-- Seleccione --</option>
+                    <option *ngFor="let amperaje of amperajes" value="{{amperaje.id}}"> {{amperaje.amp}}  </option>
                   </select>
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+                 
               </div>
               <div class="col-span-4 md:col-span-2 lg:col-span-3">
                   <label for="grupo" class="text-gray-800 mb-2 font-bold">Grupo</label>
-                  <select name="grupo" id="grupo" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4">
+                  <select name="grupo" id="grupo" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4"
+                    formControlName="grupo_id"
+                  >
                     <option value="">-- Seleccione --</option>
+                    <option *ngFor="let grupo of grupos" value="{{grupo.id}}">{{grupo.nombre}}</option>
                   </select>
-                  <span class="block w-full mb-2 mt-1 p-2 border border-red-600 border-l-4 rounded bg-red-100 text-xs text-gray-800" *ngIf="false">
-                    Este campo es obligatorio
-                  </span>
+                  
               </div>
-              
+              <div class="col-span-2 lg:col-span-6" *ngIf="error">
+                <error-form [mensaje]="error"></error-form>
+              </div>
               <div class="col-span-4 lg:col-span-6">
                   <button type="submit" class="px-3 py-2 bg-red-500 rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear mx-auto block">Registrar</button>
               </div>
